--- a/dbconfig.json
+++ b/dbconfig.json
@@ -1,12 +1,12 @@
 {
   "DataBase": {
-    "dbname": "",
+    "dbname": "gomango",
     "dbtype": "mysql",
     "port": 3306
   },
   "DbAuth": {
-    "ServerIPv4": ["192.168.68.145", "8080"],
-    "username": "",
+    "ServerIPv4": ["192.168.68.101", "8080"],
+    "username": "root",
     "password": ""
   }
 }
